update gitignore to upload static libraries,

--- a/.gitignore
+++ b/.gitignore
@@ -20,11 +20,11 @@
 *.mod
 *.smod
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
+# # Compiled Static libraries
+# *.lai
+# *.la
+# *.a
+# *.lib
 
 # Executables
 *.exe
